--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/app.ts"
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/marked": "^4.0.3",
     "@types/node": "^18.7.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
