--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "4",
-    "md-to-pdf": "^5.1.0"
+    "markdown-pdf": "^11.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/markdown-pdf": "^9.0.1",
     "@types/marked": "^4.0.3",
     "@types/node": "^18.7.2",
     "ts-node": "^10.9.1",
